# Multi-Industry-AI-Chatbot-Widget

./: .env.example  .gitignore  PROJECT_README.md  README.md  chat-embed.html  detail.md  frontend_readme.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  prompt.md  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.claude/skills/authentication-setup/: SKILL.md
.claude/skills/jwt-authentication-setup/: SKILL.md
backend/: Dockerfile  README.md  config.py  main.py  models.py  pyproject.toml  requirements.txt  start.sh  startup.py
public/: embed-script.js
src/: App.css  App.tsx  embed-script.js  embedded-chat.tsx  index.css
src/components/: AnalyticsPanel.tsx  ChatWidget.tsx  ChatWindow.tsx  EmbeddedChatWidget.tsx  IndustrySelector.tsx  LeadCaptureForm.tsx  MessageBubble.tsx  MessageHistory.tsx  MessageInput.tsx  QuickReplies.tsx  SettingsPanel.tsx  WelcomeMessage.tsx
src/config/: chatConfig.ts
src/context/: ChatContext.tsx
src/types/: chat.ts
src/utils/: api.ts  messages.ts  storage.ts  validation.ts
